Working on the responsive login page and trying to fix the footer overflow if the window is too small and the scroll doesn't go below

--- a/src/components/shell/less/styles.less
+++ b/src/components/shell/less/styles.less
@@ -34,11 +34,20 @@
   width:100%;
 }
 
+ .footer {
+   position: fixed;
+   width: 100%;
+   bottom: 0;
+   margin-bottom: 0;
+   clear:both;
+ }
+
 @media screen and(max-width: 600px){
   .leftCol{
     max-width:80%;
     border:none;
     padding: auto;
+    margin-left: 15%;
   }
   .signInUpButtons{
     margin-top: 6px;
@@ -46,7 +55,8 @@
   }
   .rightCol{
     margin-top: 5px;
-    padding: 0 90px 0 0;
+    padding: 0 50px 0 0;
+    margin-left: 15%;
   }
   .mainPanel {
     margin: 150px auto 20px;
